@@ -1,12 +1,14 @@
-FROM gradle:6.6.0-jdk11
+FROM gradle:8.4.0-jdk21
 USER root
 WORKDIR /http4k
-COPY build.gradle build.gradle
-COPY settings.gradle settings.gradle
+COPY build.gradle.kts build.gradle.kts
+COPY settings.gradle.kts settings.gradle.kts
 COPY core core
+COPY core-jdbc core-jdbc
+COPY core-pgclient core-pgclient
 COPY ratpack ratpack
-RUN gradle --quiet ratpack:shadowJar
+RUN gradle --quiet --no-daemon ratpack:shadowJar
 
 EXPOSE 9000
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+AlwaysPreTouch", "-jar", "ratpack/build/libs/http4k-ratpack-benchmark.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AlwaysPreTouch", "-jar", "ratpack/build/libs/http4k-benchmark.jar"]
